# fut-listen

./: README.md  generate_audio.py  pyproject.toml
src/fut_listen/: cli.py
src/fut_listen/assets/: audio_play_1.m4a  audio_play_2.m4a  audio_play_3.m4a  audio_play_4.m4a  audio_play_5.m4a  before_we_start_listening_you_can_read_the_questions.m4a  good_job.m4a  listening_number_1.m4a  listening_number_10.m4a  listening_number_2.m4a  listening_number_3.m4a  listening_number_4.m4a  listening_number_5.m4a  listening_number_6.m4a  listening_number_7.m4a  listening_number_8.m4a  listening_number_9.m4a  now_starting_the_listening_section_of_the_test.m4a  the_audio_will_play_1_time.m4a  the_audio_will_play_2_times.m4a  the_audio_will_play_3_times.m4a  the_audio_will_play_4_times.m4a  the_audio_will_play_5_times.m4a  the_listening_section_is_finished.m4a
